# FinanceManagerQT

./: README.md
FinanceManagerQt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
